Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.30**

***	Add vrename --language option. [Dan Moore]

***	Add Verilog::Language::language_maximum and language_keywords.

****	Fix escaped identifiers that are keywords, bug282. [Dan Moore]

* Verilog::Language 3.302 2010/08/26

****	Increase define recursions before error.  [Paul Liu]

****	Fix documentation on verilog_text and link, bug278. [Mike Z]

****	Use Digest::SHA instead of SHA1, bug277.  [Ahmed El-Mahmoudy]

****	Fix false test failure if Math::BigInt not installed.

* Verilog::Language 3.301 2010/08/04

****	Improve Bison/flex skipping to increase CPAN-Testers pass rate.

* Verilog::Language 3.300 2010/08/02

**	Support SystemVerilog 2009 standard, including new keywords.

***	Bison/flex are no longer required to build, unless sources are changed.

****	Fix preprocessing ifdef `INDIRECT(DEFINE).

****	Fix preprocessor preservation of newlines across macro substitutions.

****	Fix preprocessor stringification of nested macros.

****	Fix preprocessor whitespace on define arguments

* Verilog::Language 3.251 2010/06/29

***	Add vppreproc --dump-defines option.

****	Fix vpassert "POSIX::BUFSIZ" error on Perl 5.8.8.  [Chitlesh Goorah]

* Verilog::Language 3.250 2010/06/21

**	Add parsing of "defparam", including SigParser::defparam callback,
	Netlist::ContAssign object, and accessors. [Pierre-David Pfister]

****	Fix complex {...} port declarations, bug262.  [Evgeni Stavinov]

* Verilog::Language 3.241 2010/05/01

***	Add vpassert --call-* switches to use user's PLI display functions.

****	Disable Parser unreadback() data during std:: parsing. [Mark Nodine]

****	Fix preprocessing some DOS carriage returns, broke in 3.240.

* Verilog::Language 3.240 2010/03/29

***	Add vpassert vp_coverage_off/on pragmas.
