@@ -1,0 +1,18 @@
+# Generated by vrename on Mon Sep 13 16:30:03 2010
+#
+# Files read for this analysis:
+vfile	"t/51_vrename_kwd.v"
+#
+#	Original Signal Name		Name to change to
+#	--------------------		-----------------
+#
+sigren	"\do "				"\do "
+sigren	"\esc[ape]d "			"\esc[ape]d "
+sigren	"do"				"\do "
+sigren	"foo"				"foo"
+sigren	"vrename_kwd"			"vrename_kwd"
+#
+# Use M-x compile in emacs to automatically perform the changes:
+## Local Variables: ***
+## compile-command: "./vrename -change t/51_vrename_kwd.v " ***
+## End: ***
